# dbt-example

./: .gitignore  README.md  dbt_project.yml  profile.yml  profiles.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
analytics/: dbt_project.yml
models/: sources.yml
models/example/: albums.sql  example_model.yml
models/sources/: chinook.yml
sql/: chinook.sql
