[tool.poetry]
name = "dbt-example"
version = "0.1.0"
description = "DBT example project"
authors = ["stassajin <sajin.stanislav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dbt = "0.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
